--- a/index.html
+++ b/index.html
@@ -11,11 +11,12 @@
 		<link href="bower_components/font-awesome/css/font-awesome.css" rel="stylesheet">
 		<link href="bower_components/fotorama/fotorama.css" rel="stylesheet">
 		<link href="bower_components/lightbox2/dist/css/lightbox.min.css" rel="stylesheet">
+		<link href="css/main.css" rel="stylesheet">
 	</head>
 	<body>
 		<header>
 			<nav id="nabvar" class="navbar navbar-default navbar-fixed-top" role="navigation">
-				<!-- El logotipo y el icono que despliega el menú se agrupan para mostrarlos mejor en los dispositivos móviles -->
+				
 				<div class="navbar-header">
 					<button type="button" class="navbar-toggle" data-toggle="collapse"
 					data-target=".navbar-ex1-collapse">
@@ -26,7 +27,6 @@
 					</button>
 					<a class="navbar-brand" href="#">Logotipo</a>
 				</div>
-				<!-- Agrupar los enlaces de navegación, los formularios y cualquier otro elemento que se pueda ocultar al minimizar la barra -->
 				<div class="collapse navbar-collapse navbar-ex1-collapse">
 					<ul class="nav navbar-nav">
 						<li class="active"><a href="#">Enlace #1</a></li>
@@ -71,8 +71,8 @@
 
 		<section id="home">
 			<div class="fotorama" data-autoplay="true" data-loop="true" class="fotorama" data-width="100%" data-height="100%" data-fit="cover" data-nav="none" data-transition="crossfade" data-clicktransition="crossfade" data-transitionduration="1000">
-				<a href="https://placeholdit.imgix.net/~text?txtsize=158&txt=Slide+One&w=1980&h=1000"><img src="https://placeholdit.imgix.net/~text?txtsize=158&txt=Slide+One&w=1980&h=1000"></a>
-			  	<a href="https://placeholdit.imgix.net/~text?txtsize=158&txt=Slide+Two&w=1980&h=1000"><img src="https://placeholdit.imgix.net/~text?txtsize=158&txt=Slide+Two&w=1980&h=1000"></a>
+				<a href="images/patos.jpg"><img src="images/patos.jpg"></a>
+			  	<a href="images/patos.jpg"><img src="images/patos.jpg"></a>
 			</div>
 		</section>
 		
@@ -185,13 +185,15 @@
 		</section>
 
 		<footer>
-            <div class="row">
-                <hr>
-                <div class="col-lg-12">
-                    <p>Copyright © Valor Ambiental 2016</p>
-                </div>
-            </div>
-        </footer>
+			<div class="container">
+				<div class="row">
+					<hr />
+					<div class="col-lg-12">
+						<p>Copyright © Valor Ambiental 2016</p>
+					</div>
+				</div>
+			</div>
+		</footer>
 
 
 
@@ -200,7 +202,6 @@
 		<script type="text/javascript" src="bower_components/fotorama/fotorama.js"></script>
 		<script type="text/javascript" src="bower_components/lightbox2/dist/js/lightbox.min.js"></script>
 		<script type="text/javascript" src="bower_components/requirejs/require.js"></script>
-		<script type="text/javascript" src="bower_components/chartjs/src/charts/Chart.Bar.js"></script>
 		<script type="text/javascript">
 			$(document).on("scroll",function(){
 	            if($(document).scrollTop()>100) { 
