--- a/index.html
+++ b/index.html
@@ -84,11 +84,11 @@
 					</div>
 					<div class="collapse navbar-collapse navbar-ex1-collapse">
 						<ul class="nav navbar-nav navbar-right">
-							<li><a href="index.html">Home</a></li>
-							<li><a href="index.html">Quienes Somos</a></li>
-							<li><a href="index.html">Servicios</a></li>
-							<li><a href="index.html">Noticias</a></li>
-							<li><a href="index.html">Contacto</a></li>
+							<li class="active"><a href="index.html">Home</a></li>
+							<li><a href="quienes.html">Quienes Somos</a></li>
+							<li><a href="servicios.html">Servicios</a></li>
+							<li><a href="noticias.html">Noticias</a></li>
+							<li><a href="contacto.html">Contacto</a></li>
 						</ul>
 					</div>
 				</div>
