Maqueta Valor Ambiental 0.3
Se agrega contacto

--- a/contacto.html
+++ b/contacto.html
@@ -95,8 +95,62 @@
 			<div class="container">
 				<div class="row">
 					<h1>Contacto</h1>
-					<div class="">
-						
+					<div class="col-lg-6">
+						<form action="enviar.php" method="POST" class="form-horizontal">
+							<div class="form-group">
+								<div class="control-label col-sm-2">
+									<label>Nombre: </label>
+								</div>
+								<div class="col-sm-10">
+									<input type="text" id="" name="" class="form-control">
+								</div>
+							</div>
+							<div class="form-group">
+								<div class="control-label col-sm-2">
+									<label>Email: </label>
+								</div>
+								<div class="col-sm-10">
+									<input type="text" id="" name="" class="form-control">
+								</div>
+							</div>
+							<div class="form-group">
+								<div class="control-label col-sm-2">
+									<label>Teléfono: </label>
+								</div>
+								<div class="col-sm-10">
+									<input type="text" id="" name="" class="form-control">
+								</div>
+							</div>
+							<div class="form-group">
+								<div class="control-label col-sm-2">
+									<label>Teléfono: </label>
+								</div>
+								<div class="col-sm-10">
+									<textarea id="" name="" class="form-control" rows="6"></textarea>
+								</div>
+							</div>
+						</form>
+					</div>
+					<div class="col-lg-6 pull-right">
+						<div class="row">
+							<div class="col-xs-2 text-center"><span><i class="fa fa-map-marker fa-2x"></i></span></div>
+							<div class="col-xs-10">Miguel Aguirre Perry 2080, La Serena, Chile</div>
+						</div>
+						<div class="row">
+							<div class="col-xs-2 text-center"><span><i class="fa fa-phone fa-2x"></i></span></div>
+							<div class="col-xs-10">51 - 2283338</div>
+						</div>
+						<div class="row">
+							<div class="col-xs-2 text-center"><span><i class="fa fa-envelope-o fa-2x"></i></span></div>
+							<div class="col-xs-10">contacto@valoramibiental.cl</div>
+						</div>
+					</div>
+				</div>
+			</div>
+			<div class="container-fluid">
+				<div class="row">
+					<div class="map">
+						<iframe src="https://www.google.com/maps/embed?pb=!1m14!1m8!1m3!1d13832.044904066477!2d-71.247942!3d-29.921579!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x9691ca5c711f3b4b%3A0x88193d8e4e5b6b5b!2sMiguel+Aguirre+Perry+2080%2C+La+Serena%2C+Regi%C3%B3n+de+Coquimbo%2C+Chile!5e0!3m2!1ses-419!2sus!4v1473373856159" width="100%" height="450" frameborder="0" style="border:0" allowfullscreen></iframe>
 					</div>
 				</div>
 			</div>
