--- a/index.html
+++ b/index.html
@@ -213,8 +213,8 @@
 
 		<section id="videos">
 			<div class="container">
-				<h1>Servicios</h1>
-				<div class="row">
+				<h1>Nuestros Servicios</h1>
+				<div class="row wow slideInLeft">
 					<div class="col-xs-12 col-sm-12 col-md-4 col-lg-4">
 						<div class="embed-responsive embed-responsive-16by9">
 							<iframe class="embed-responsive-item" src="https://www.youtube.com/embed/85MppyLJHz0"  allowfullscreen></iframe>
@@ -237,10 +237,10 @@
 		<section id="areas">
 			<div class="container">
 				<div class="row">
-					<div class="hidden-xs hidden-sm hidden-md col-lg-4">
+					<div class="hidden-xs hidden-sm hidden-md col-lg-4 wow bounceIn">
 						<div class="wrapper1"></div>
 					</div>
-					<div class="col-lg-4">
+					<div class="col-lg-4 wow flipInY">
 						<a href="">
 							<div class="wrapper2">
 								<h1>Gestión de Ingeniería</h1>
@@ -248,12 +248,10 @@
 							</div>
 						</a>
 					</div>
-					<div class="hidden-xs hidden-sm hidden-md col-lg-4">
-						<div class="wrapper3">
-
-						</div>
+					<div class="hidden-xs hidden-sm hidden-md col-lg-4 wow bounceIn">
+						<div class="wrapper3"></div>
 					</div>
-					<div class="col-lg-4">
+					<div class="col-lg-4 wow flipInY">
 						<a href="">
 							<div class="wrapper4">
 								<h1>Gestión Documental</h1>
@@ -261,12 +259,12 @@
 							</div>
 						</a>
 					</div>
-					<div class="hidden-xs hidden-sm hidden-md col-lg-4">
+					<div class="hidden-xs hidden-sm hidden-md col-lg-4 wow bounceIn">
 						<div class="wrapper5"></div>
 					</div>
-					<div class="col-lg-4">
+					<div class="col-xs-12 col-sm-12 col-md-12 col-lg-4">
 						<a href="">
-							<div class="wrapper6">
+							<div class="wrapper6 wow flipInY">
 								<h1>Gestión Ambiental</h1>
 								<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Veniam laudantium repellat dolore voluptates, nam esse sequi culpa labore! Error ducimus temporibus laudantium alias. Qui nisi, sit quos fugit. Quaerat, recusandae?</p>
 							</div>
@@ -278,34 +276,14 @@
 
 		<section id="graficos">
 			<div class="container">
-				<h1>Nuestros Logros</h1>
+
 				<div class="row">
-					<div class="col-lg-4">
-						<div class="panel panel-default">
-
-							<div class="panel-body">
-							<!-- <div id="graph"></div> -->
-							</div>
-							<div class="panel-footer">Panel Footer</div>
-						</div>
+					<h1 class="wow slideInLeft">Certificaciones</h1>
+					<div class="col-lg-8 wow zoomIn">
+						<p class="lead">Nuestra empresa ha implementado la norma internacional de la calidad <b>ISO 9001:2008; NCH 9001:2009</b> a nuestros servicios de <b>“Análisis de Aplicabilidad para Permisos Sectoriales”</b> y <b>“Elaboración y Tramitación de Permisos Sectoriales”</b>, obteniendo dicha certificación hasta el 19 de agosto de 2019.</p>
 					</div>
-					<div class="col-lg-4">
-						<div class="panel panel-default">
-
-							<div class="panel-body">
-							<!-- <div id="graph2"></div> -->
-							</div>
-							<div class="panel-footer">Panel Footer</div>
-						</div>
-					</div>
-					<div class="col-lg-4">
-						<div class="panel panel-default">
-
-							<div class="panel-body">
-								<!-- <div id="graph3"></div> -->
-							</div>
-							<div class="panel-footer">Panel Footer</div>
-						</div>
+					<div class="col-lg-4 wow zoomIn">
+						<img class="center-block" src="images/iso.svg" alt="">
 					</div>
 				</div>
 			</div>
@@ -314,7 +292,6 @@
 		<footer>
 			<div class="container">
 				<div class="row">
-					<hr />
 					<div class="col-lg-12">
 						<p>Copyright © Valor Ambiental 2016</p>
 					</div>
