Sed avanzo quienes y la caga
como la corneta

--- a/index.html
+++ b/index.html
@@ -276,14 +276,13 @@
 
 		<section id="graficos">
 			<div class="container">
-
+				<h1 class="wow slideInLeft">Certificaciones</h1>
 				<div class="row">
-					<h1 class="wow slideInLeft">Certificaciones</h1>
 					<div class="col-lg-8 wow zoomIn">
 						<p class="lead">Nuestra empresa ha implementado la norma internacional de la calidad <b>ISO 9001:2008; NCH 9001:2009</b> a nuestros servicios de <b>“Análisis de Aplicabilidad para Permisos Sectoriales”</b> y <b>“Elaboración y Tramitación de Permisos Sectoriales”</b>, obteniendo dicha certificación hasta el 19 de agosto de 2019.</p>
 					</div>
 					<div class="col-lg-4 wow zoomIn">
-						<img class="center-block" src="images/iso.svg" alt="">
+						<img class="img-responsive center-block" src="images/iso.svg" alt="">
 					</div>
 				</div>
 			</div>
