Se agregaron los links de video

--- a/index.html
+++ b/index.html
@@ -217,17 +217,17 @@
 				<div class="row wow slideInLeft">
 					<div class="col-xs-12 col-sm-12 col-md-4 col-lg-4">
 						<div class="embed-responsive embed-responsive-16by9">
-							<iframe class="embed-responsive-item" src="https://www.youtube.com/embed/85MppyLJHz0"  allowfullscreen></iframe>
+							<iframe class="embed-responsive-item" src="https://www.youtube.com/embed/hgwCA2peSVg"  allowfullscreen></iframe>
 						</div>
 					</div>
 					<div class="col-xs-12 col-sm-12 col-md-4 col-lg-4">
 						<div class="embed-responsive embed-responsive-16by9">
-							<iframe class="embed-responsive-item" src="https://www.youtube.com/embed/85MppyLJHz0"  allowfullscreen></iframe>
+							<iframe class="embed-responsive-item" src="https://www.youtube.com/embed/pjTatLuehsU"  allowfullscreen></iframe>
 						</div>
 					</div>
 					<div class="col-xs-12 col-sm-12 col-md-4 col-lg-4">
 						<div class="embed-responsive embed-responsive-16by9">
-							<iframe class="embed-responsive-item" src="https://www.youtube.com/embed/85MppyLJHz0"  allowfullscreen></iframe>
+							<iframe class="embed-responsive-item" src="https://www.youtube.com/embed/ckjfdvInxRI"  allowfullscreen></iframe>
 						</div>
 					</div>
 					</div>
