--- a/quienes.html
+++ b/quienes.html
@@ -46,7 +46,7 @@
     <div class="row">
       <div class="col-lg-12">
         <div class="embed-responsive embed-responsive-16by9">
-          <iframe class="embed-responsive-item" src="https://www.youtube.com/embed/85MppyLJHz0"  allowfullscreen></iframe>
+          <iframe class="embed-responsive-item" src="https://www.youtube.com/embed/_fjGRgWgAOI"  allowfullscreen></iframe>
         </div>
       </div>
     </div>
@@ -64,27 +64,43 @@
         </p>
         <p class="lead">
           Nuestro equipo multidisciplinario está conformado por:
-          <div class="col-lg-3">
-            <h4>Ingenieros Ambientales</h4>
-            <h4>Arquitectos</h4>
-          </div>
-          <div class="col-lg-3">
-            <h4>Ingenieros en Obras Civiles</h4>
-            <h4>Ingenieros Mecánicos</h4>
-          </div>
-          <div class="col-lg-3">
-            <h4>Informáticos</h4>
-            <h4>Prevencionistas de Riesgos</h4>
-          </div>
-          <div class="col-lg-3">
-            <h4>Profesionales del área de Administración y Negocio</h4>
-          </div>
-        </p>
+					<div class="col-md-3">
+						<div class="panel panel-default">
+							<div class="panel-body">
+							Ingenieros Ambientales
+							Arquitectos
+							</div>
+						</div>
+					</div>
+					<div class="col-md-3">
+						<div class="panel panel-default">
+							<div class="panel-body">
+								Ingenieros en Obras Civiles
+								Mécanicos
+							</div>
+						</div>
+					</div>
+					<div class="col-md-3">
+						<div class="panel panel-default">
+							<div class="panel-body">
+								Informáticos
+								Prevencionistas de Riesgos
+							</div>
+						</div>
+					</div>
+					<div class="col-md-3">
+						<div class="panel panel-default">
+							<div class="panel-body">
+							Profesionales del área de Administración y Negocios
+							</div>
+						</div>
+					</div>
+    		</p>
 
           <p class="lead">Contamos además con un equipo de apoyo externo, quienes nos asesoran en
           materias relativas a la normativa legal vigente asociada al ámbito ambiental, estudios hidrogeológicos, topográficos, mejoramiento continuo de nuestros procesos, soporte web, diseño de imagen corporativa y gestión de recursos humanos</p>
 
-          <p class="lead">Nuestra empresa ha implementado la norma internacional de la calidad ISO 9001:2008; NCH 9001:2009 a nuestros servicios de “Análisis de Aplicabilidad para Permisos Sectoriales” y “Elaboración y Tramitación de Permisos Sectoriales”, obteniendo dicha certificación hasta el 19 de agosto de 2019.
+          <p class="lead">Nuestra empresa ha implementado la norma internacional de la calidad <b>ISO 9001:2008; NCH 9001:2009</b> a nuestros servicios de <b>“Análisis de Aplicabilidad para Permisos Sectoriales”</b> y <b>“Elaboración y Tramitación de Permisos Sectoriales”</b>, obteniendo dicha certificación hasta el 19 de agosto de 2019.
         </p>
       </div>
     </div>
