arreglos menores pagina quienes

--- a/index.html
+++ b/index.html
@@ -85,7 +85,7 @@
 					<div class="collapse navbar-collapse navbar-ex1-collapse">
 						<ul class="nav navbar-nav navbar-right">
 							<li class="active"><a href="index.html">Home</a></li>
-							<li><a href="quienes.html">Quienes Somos</a></li>
+							<li><a href="quienes.html">Quiénes Somos</a></li>
 							<li><a href="servicios.html">Servicios</a></li>
 							<li><a href="noticias.html">Noticias</a></li>
 							<li><a href="contacto.html">Contacto</a></li>
