--- a/quienes.html
+++ b/quienes.html
@@ -31,7 +31,7 @@
       <div class="collapse navbar-collapse navbar-ex1-collapse">
         <ul class="nav navbar-nav navbar-right">
           <li><a href="index.html">Home</a></li>
-          <li><a href="quienes.html">Quienes Somos</a></li>
+          <li><a href="quienes.html">Quiénes Somos</a></li>
           <li><a href="servicios.html">Servicios</a></li>
           <li><a href="noticias.html">Noticias</a></li>
           <li class="active"><a href="contacto.html">Contacto</a></li>
@@ -67,42 +67,52 @@
 					<div class="col-md-3">
 						<div class="panel panel-default">
 							<div class="panel-body">
-							Ingenieros Ambientales
-							Arquitectos
+								<ul>
+									<li>Ingenieros Ambientales</li>
+									<li>Arquitectos</li>
+								</ul>
 							</div>
 						</div>
 					</div>
 					<div class="col-md-3">
 						<div class="panel panel-default">
 							<div class="panel-body">
-								Ingenieros en Obras Civiles
-								Mécanicos
+								<ul>
+									<li>Ingenieros en Obras Civiles</li>
+									<li>Mecánicos</li>
+								</ul>
 							</div>
 						</div>
 					</div>
 					<div class="col-md-3">
 						<div class="panel panel-default">
 							<div class="panel-body">
-								Informáticos
-								Prevencionistas de Riesgos
+								<ul>
+									<li>Informáticos</li>
+									<li>Prevencionistas de Riesgos</li>
+								</ul>
 							</div>
 						</div>
 					</div>
 					<div class="col-md-3">
 						<div class="panel panel-default">
 							<div class="panel-body">
-							Profesionales del área de Administración y Negocios
+							<ul>
+								<li>Profesionales del área de Administración y Negocios</li>
+							</ul>
 							</div>
 						</div>
 					</div>
     		</p>
+				<p class="lead">Contamos además con un equipo de apoyo externo, quienes nos asesoran en
+				materias relativas a la normativa legal vigente asociada al ámbito ambiental, estudios hidrogeológicos, topográficos, mejoramiento continuo de nuestros procesos, soporte web, diseño de imagen corporativa y gestión de recursos humanos</p>
 
-          <p class="lead">Contamos además con un equipo de apoyo externo, quienes nos asesoran en
-          materias relativas a la normativa legal vigente asociada al ámbito ambiental, estudios hidrogeológicos, topográficos, mejoramiento continuo de nuestros procesos, soporte web, diseño de imagen corporativa y gestión de recursos humanos</p>
+				<p class="lead alert alert-info">Nuestra empresa ha implementado la norma internacional de la calidad <b>ISO 9001:2008; NCH 9001:2009</b> a nuestros servicios de <b>“Análisis de Aplicabilidad para Permisos Sectoriales”</b> y <b>“Elaboración y Tramitación de Permisos Sectoriales”</b>, obteniendo dicha certificación hasta el 19 de agosto de 2019.
+				</p>
 
-          <p class="lead">Nuestra empresa ha implementado la norma internacional de la calidad <b>ISO 9001:2008; NCH 9001:2009</b> a nuestros servicios de <b>“Análisis de Aplicabilidad para Permisos Sectoriales”</b> y <b>“Elaboración y Tramitación de Permisos Sectoriales”</b>, obteniendo dicha certificación hasta el 19 de agosto de 2019.
-        </p>
-      </div>
+			</div>
+
+
     </div>
   </div>
 </section>
