Arreglando cagada de prueba

--- a/index.html
+++ b/index.html
@@ -85,7 +85,7 @@
 					<div class="collapse navbar-collapse navbar-ex1-collapse">
 						<ul class="nav navbar-nav navbar-right">
 							<li class="active"><a href="index.html">Home</a></li>
-							<li><a href="quienes.html">Quienes Somos</a></li>
+							<li><a href="quienes.html">Quiénes Somos</a></li>
 							<li><a href="servicios.html">Servicios</a></li>
 							<li><a href="noticias.html">Noticias</a></li>
 							<li><a href="contacto.html">Contacto</a></li>
@@ -217,17 +217,17 @@
 				<div class="row wow slideInLeft">
 					<div class="col-xs-12 col-sm-12 col-md-4 col-lg-4">
 						<div class="embed-responsive embed-responsive-16by9">
-							<iframe class="embed-responsive-item" src="https://www.youtube.com/embed/85MppyLJHz0"  allowfullscreen></iframe>
+							<iframe class="embed-responsive-item" src="https://www.youtube.com/embed/hgwCA2peSVg"  allowfullscreen></iframe>
 						</div>
 					</div>
 					<div class="col-xs-12 col-sm-12 col-md-4 col-lg-4">
 						<div class="embed-responsive embed-responsive-16by9">
-							<iframe class="embed-responsive-item" src="https://www.youtube.com/embed/85MppyLJHz0"  allowfullscreen></iframe>
+							<iframe class="embed-responsive-item" src="https://www.youtube.com/embed/pjTatLuehsU"  allowfullscreen></iframe>
 						</div>
 					</div>
 					<div class="col-xs-12 col-sm-12 col-md-4 col-lg-4">
 						<div class="embed-responsive embed-responsive-16by9">
-							<iframe class="embed-responsive-item" src="https://www.youtube.com/embed/85MppyLJHz0"  allowfullscreen></iframe>
+							<iframe class="embed-responsive-item" src="https://www.youtube.com/embed/ckjfdvInxRI"  allowfullscreen></iframe>
 						</div>
 					</div>
 					</div>
