--- a/index.html
+++ b/index.html
@@ -85,7 +85,7 @@
 					<div class="collapse navbar-collapse navbar-ex1-collapse">
 						<ul class="nav navbar-nav navbar-right">
 							<li class="active"><a href="index.html">Home</a></li>
-							<li><a href="quienes.html">Quiénes Somos</a></li>
+							<li><a href="quienes.html">Quienes Somos</a></li>
 							<li><a href="servicios.html">Servicios</a></li>
 							<li><a href="noticias.html">Noticias</a></li>
 							<li><a href="contacto.html">Contacto</a></li>
@@ -98,7 +98,7 @@
 
 		<section id="home">
 			<div class="fotorama" data-autoplay="true" data-loop="true" class="fotorama" data-width="100%" data-height="100%" data-fit="cover" data-nav="none" data-transition="crossfade" data-clicktransition="crossfade" data-transitionduration="1000">
-				<div data-img="images/paisaje.jpg">
+				<div data-img="images/equipo.jpg">
 					<svg class="logo visible-xs" version="1.1"
 						 xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" xmlns:a="http://ns.adobe.com/AdobeSVGViewerExtensions/3.0/"
 						 x="0px" y="0px" width="397.2px" height="238px" viewBox="0 0 397.2 238" enable-background="new 0 0 397.2 238"
@@ -152,7 +152,7 @@
 					</svg>
 
 				</div>
-  			<div data-img="images/ave.jpg">
+  			<div data-img="images/proceso.jpg">
 					<svg class="logo visible-xs" version="1.1"
 						 xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" xmlns:a="http://ns.adobe.com/AdobeSVGViewerExtensions/3.0/"
 						 x="0px" y="0px" width="397.2px" height="238px" viewBox="0 0 397.2 238" enable-background="new 0 0 397.2 238"
@@ -219,16 +219,22 @@
 						<div class="embed-responsive embed-responsive-16by9">
 							<iframe class="embed-responsive-item" src="https://www.youtube.com/embed/hgwCA2peSVg"  allowfullscreen></iframe>
 						</div>
+						<h4>Daniel Cerda</h4>
+						<p>Coordinador de Proyectos Ambientales</p>
 					</div>
 					<div class="col-xs-12 col-sm-12 col-md-4 col-lg-4">
 						<div class="embed-responsive embed-responsive-16by9">
 							<iframe class="embed-responsive-item" src="https://www.youtube.com/embed/pjTatLuehsU"  allowfullscreen></iframe>
 						</div>
+						<h4>David Bustos</h4>
+						<p>Coordinador de Proyectos de Infraestructura</p>
 					</div>
 					<div class="col-xs-12 col-sm-12 col-md-4 col-lg-4">
 						<div class="embed-responsive embed-responsive-16by9">
 							<iframe class="embed-responsive-item" src="https://www.youtube.com/embed/ckjfdvInxRI"  allowfullscreen></iframe>
 						</div>
+						<h4>Richard Varas</h4>
+						<p>Coordinador de Gestión Ambiental Estratégica</p>
 					</div>
 					</div>
 				</div>
