--- a/noticias.html
+++ b/noticias.html
@@ -116,17 +116,17 @@
                 <p>Dic 17, 2015</p>
             </div>
             <div class="col-md-5">
-                <a href="blog-post.html">
+                <a href="valor-ambiental-realiza-levantamiento-viviendas-danadas-por-terremoto-canela.html">
                     <img class="img-responsive img-hover center-block" src="images/canela.jpg" alt="">
                 </a>
             </div>
             <div class="col-md-6">
                 <h3>
-                    <a href="valor-ambiental-realiza-levantamiento-viviendas-dañadas-por-terremoto-canela.html">Valor Ambiental realiza levantamiento de viviendas dañadas por el terremoto en Canela</a>
+                    <a href="valor-ambiental-realiza-levantamiento-viviendas-danadas-por-terremoto-canela.html">Valor Ambiental realiza levantamiento de viviendas dañadas por el terremoto en Canela</a>
                 </h3>
                 <p>por Sergio Mena</p>
                 <p>En coordinación con la Ilustre Municipalidad de Canela y la Fundacion Alter - Eco, Valor Ambiental y sus colaboradores realiza el levantamiento de las  viviendas dañadas post terremoto del pasado 16 de septiembre del 2015.</p>
-                <a class="btn btn-primary" href="blog-post.html">Ver Más <i class="fa fa-angle-right"></i></a>
+                <a class="btn btn-primary" href="valor-ambiental-realiza-levantamiento-viviendas-danadas-por-terremoto-canela.html">Ver Más <i class="fa fa-angle-right"></i></a>
             </div>
         </div>
         <!-- /.row -->
@@ -141,18 +141,18 @@
                 <p>Dic 10, 2015</p>
             </div>
             <div class="col-md-5">
-                <a href="blog-post.html">
+                <a href="valor-ambiental-nuevamente-es-reconocida-por-su-compromiso-con-seguridad-y-salud.html">
                     <img class="img-responsive img-hover center-block" src="images/mutual_033.jpg" alt="">
                 </a>
             </div>
             <div class="col-md-6">
                 <h3>
-                    <a href="blog-post.html">Valor ambiental nuevamente es reconocida por su compromiso con la Seguridad y Salud Ocupacional</a>
+                    <a href="valor-ambiental-nuevamente-es-reconocida-por-su-compromiso-con-seguridad-y-salud.html">Valor ambiental nuevamente es reconocida por su compromiso con la Seguridad y Salud Ocupacional</a>
                 </h3>
                 <p>por Sergio Mena</p>
                 <p>Se celebró con orgullo el reconocimiento recibido por La Mutual de Seguridad a nuestra empresa Valor Ambiental, este jueves 05 de Noviembre del 2015, por cumplir 5 años sin accidente con tiempo perdido, en el contrato de Servicios de Gestión Ambiental y Seguridad, en Compañía Mineta Teck Carmen Andacollo.</p>
                 <p>Los desafíos constantes en sembrar la cultura de seguridad siguen dando frutos, y seguiremos esforzándonos en prevalecer día a día nuestro futuro libre de accidentes y enfermedades profesionales.</p>
-                <a class="btn btn-primary" href="blog-post.html">Ver Más <i class="fa fa-angle-right"></i></a>
+                <a class="btn btn-primary" href="valor-ambiental-nuevamente-es-reconocida-por-su-compromiso-con-seguridad-y-salud.html">Ver Más <i class="fa fa-angle-right"></i></a>
             </div>
         </div>
         <!-- /.row -->
@@ -167,17 +167,17 @@
                 <p>May 09, 2014</p>
             </div>
             <div class="col-md-5">
-                <a href="blog-post.html">
+                <a href="valor-ambiental-conjunto-con-superintendencia-recursos-hídricos-teck-cda-realiza-segundo.html">
                     <img class="img-responsive img-hover center-block" src="images/taller_gh.jpg" alt="">
                 </a>
             </div>
             <div class="col-md-6">
                 <h3>
-                    <a href="#">Valor Ambiental en conjunto con la Superintendencia de Recursos Hídricos Teck CDA realiza Segundo Taller de Riesgos Hídricos </a>
+                    <a href="valor-ambiental-conjunto-con-superintendencia-recursos-hídricos-teck-cda-realiza-segundo.html">Valor Ambiental en conjunto con la Superintendencia de Recursos Hídricos Teck CDA realiza Segundo Taller de Riesgos Hídricos </a>
                 </h3>
                 <p>por Maria José Ruz</p>
                 <p>El pasado jueves 8 de Mayo,  en el Hotel Club Resort de La Serena, se realizó el segundo Taller de Riesgos Hídricos, organizado por la Superintendencia de Recursos Hídricos. En esta oportunidad se contó con la presencia de 11 Miembros del equipo de Gestión del Agua de TECK – CDA.</p>
-                <a class="btn btn-primary" href="blog-post.html">Ver Más <i class="fa fa-angle-right"></i></a>
+                <a href="valor-ambiental-conjunto-con-superintendencia-recursos-hídricos-teck-cda-realiza-segundo.html" class="btn btn-primary" href="blog-post.html">Ver Más <i class="fa fa-angle-right"></i></a>
             </div>
         </div>
         <!-- /.row -->
@@ -192,24 +192,24 @@
                 <p>Feb 12, 2013</p>
             </div>
             <div class="col-md-5">
-                <a href="blog-post.html">
+                <a href="certificación-de-servicios-de-elaboración-y-análisis-de-aplicabilidad-de-permisos.html">
                     <img class="img-responsive img-hover center-block" src="images/taller_gh.jpg" alt="">
                 </a>
             </div>
             <div class="col-md-6">
                 <h3>
-                    <a href="blog-post.html">Certificación de servicios de Elaboración y Análisis de Aplicabilidad de Permisos Sectoriales (IA) y Elaboración y Tramitación de Permisos Sectoriales (ETP), bajo la norma ISO 9001:2008</a>
+                    <a href="certificación-de-servicios-de-elaboración-y-análisis-de-aplicabilidad-de-permisos.html">Certificación de servicios de Elaboración y Análisis de Aplicabilidad de Permisos Sectoriales (IA) y Elaboración y Tramitación de Permisos Sectoriales (ETP), bajo la norma ISO 9001:2008</a>
                 </h3>
                 <p>por Marcela Miranda</p>
                 <p>A principios del 2012 nace la idea de estandarizar los principales servicios que entrega Valor Ambiental.</p>
-                <a class="btn btn-primary" href="blog-post.html">Ver Más <i class="fa fa-angle-right"></i></a>
+                <a class="btn btn-primary" href="certificación-de-servicios-de-elaboración-y-análisis-de-aplicabilidad-de-permisos.html">Ver Más <i class="fa fa-angle-right"></i></a>
             </div>
         </div>
         <!-- /.row -->
 
     </div>
     <!-- /.container -->
-		</section>
+	</section>
 		<footer>
 			<div class="container">
 				<div class="row">
