--- a/index.html
+++ b/index.html
@@ -243,39 +243,37 @@
 		<section id="areas">
 			<div class="container">
 				<div class="row">
-					<div class="hidden-xs hidden-sm hidden-md col-lg-4 wow bounceIn">
+					<div class="hidden-xs col-sm-4 wow bounceIn">
 						<div class="wrapper1"></div>
 					</div>
-					<div class="col-lg-4 wow flipInY">
-						<a href="">
-							<div class="wrapper2">
+					<div class="col-sm-4 wow flipInY">
+						<div class="wrapper2">
 								<h1>Gestión de Ingeniería</h1>
-								<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Veniam laudantium repellat dolore voluptates, nam esse sequi culpa labore! Error ducimus temporibus laudantium alias. Qui nisi, sit quos fugit. Quaerat, recusandae?</p>
-							</div>
-						</a>
+								<p>Valor Ambiental apoya a sus clientes en la coordinación de sus proyectos para establecer la mejor estrategia en la integración de las diferentes especialidades que interactúan dentro de una faena, asegurando menores tiempos de ejecución y de tramitación frente a los organismos públicos.
+								</p>
+								<a type="button" href="servicios.html" class="btn btn-default pull-right">VER MÁS</a>
+						</div>
 					</div>
-					<div class="hidden-xs hidden-sm hidden-md col-lg-4 wow bounceIn">
+					<div class="hidden-xs col-sm-4 wow bounceIn">
 						<div class="wrapper3"></div>
 					</div>
-					<div class="col-lg-4 wow flipInY">
-						<a href="">
-							<div class="wrapper4">
+					<div class="col-sm-4 wow flipInY">
+						<div class="wrapper4">
 								<h1>Gestión Documental</h1>
-								<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Veniam laudantium repellat dolore voluptates, nam esse sequi culpa labore! Error ducimus temporibus laudantium alias. Qui nisi, sit quos fugit. Quaerat, recusandae?</p>
+								<p>Valor Ambiental apoya a sus clientes en obtener y ordenar la documentación existente. De este modo, ellos  cuentan con una herramienta para administrar su documentación y planificar estrategias.</p>
+								<a type="button" href="servicios.html" class="btn btn-default pull-right">VER MÁS</a>
 							</div>
-						</a>
 					</div>
-					<div class="hidden-xs hidden-sm hidden-md col-lg-4 wow bounceIn">
+					<div class="hidden-xs col-sm-4 wow bounceIn">
 						<div class="wrapper5"></div>
 					</div>
-					<div class="col-xs-12 col-sm-12 col-md-12 col-lg-4">
-						<a href="">
-							<div class="wrapper6 wow flipInY">
+					<div class="col-xs-12 col-sm-4">
+						<div class="wrapper6 wow flipInY">
 								<h1>Gestión Ambiental</h1>
-								<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Veniam laudantium repellat dolore voluptates, nam esse sequi culpa labore! Error ducimus temporibus laudantium alias. Qui nisi, sit quos fugit. Quaerat, recusandae?</p>
+								<p>Valor Ambiental cuenta con profesionales calificados, quienes prestan apoyo a nuestros clientes para la identificación y la tramitación de los permisos sectoriales vinculados a sus proyectos.</p>
+								<a type="button" href="servicios.html" class="btn btn-default pull-right">VER MÁS</a>
 							</div>
-						</a>
-					</div>
+						</div>
 				</div>
 			</div>
 		</section>
