--- a/index.html
+++ b/index.html
@@ -241,7 +241,7 @@
 		</section>
 
 		<section id="areas">
-			<div class="container">
+			<div class="container-fluid">
 				<div class="row">
 					<div class="hidden-xs col-sm-4 wow bounceIn">
 						<div class="wrapper1"></div>
