--- a/contacto.html
+++ b/contacto.html
@@ -7,13 +7,14 @@
 		<title>Contacto | Valor Ambiental</title>
 		<meta name="author" content="Oxido Creative Studio">
 		<meta name="description" content="">
+		<link rel="apple-touch-icon" href="apple-touch-icon.png">
 		<link href="bower_components/bootstrap/dist/css/bootstrap.min.css" rel="stylesheet">
 		<link href="bower_components/font-awesome/css/font-awesome.css" rel="stylesheet">
 		<link href="css/contacto.css" rel="stylesheet">
 	</head>
 	<body>
 		<header>
-			<nav id="nabvar" class="navbar navbar-default navbar-fixed-top" role="navigation">
+			<nav id="nabvar" class="navbar navbar-inverse navbar-fixed-top" role="navigation">
 				<div class='container'>
 					<div class="navbar-header">
 						<button type="button" class="navbar-toggle" data-toggle="collapse"
@@ -23,65 +24,65 @@
 							<span class="icon-bar"></span>
 							<span class="icon-bar"></span>
 						</button>
-						<a class="hidden-xs navbar-brand" href="index.html">
-							<!-- Generator: Adobe Illustrator 18.0.0, SVG Export Plug-In  -->
-							<svg class="logo" version="1.1"
+						<a class="navbar-brand" href="index.html">
+							<svg version="1.1"
 								 xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" xmlns:a="http://ns.adobe.com/AdobeSVGViewerExtensions/3.0/"
-								 x="0px" y="0px" width="397.2px" height="238px" viewBox="0 0 397.2 238" enable-background="new 0 0 397.2 238"
+								 x="0px" y="0px" width="154.289px" height="29.881px" viewBox="0 0 208.5 40.4" enable-background="new 0 0 208.5 40.4"
 								 xml:space="preserve">
 							<defs>
 							</defs>
 							<g>
-								<path fill="#ED6D09" d="M285.8,0c25,64-17.8,134-85.4,134h-1.2h1.2h-1.2c-67.6,0-110.4-70-85.4-134l0.2,0.2
-									c-46.3,58.9-10.6,171.9,85.1,171.9h1.5c95.7,0,131.4-113.1,85.1-171.9L285.8,0z"/>
-							</g>
-							<g>
-								<path fill="#714D22" d="M154.8,107.3c-13.1-33.6,9.4-70.4,44.9-70.4h0.7h-0.6h0.7c35.5,0,58,36.8,44.9,70.4l-0.1-0.1
-									c24.3-30.9,5.6-90.3-44.7-90.3h-0.8c-50.3,0-69,59.4-44.7,90.3L154.8,107.3z"/>
-							</g>
-							<circle fill="#6CB530" cx="199.7" cy="86" r="17.9"/>
-							<g>
-								<path fill="#714D22" d="M0,191.9h6l2.7,16.8l0.5,3l1,6.6c0.2,1.1,0.3,2.1,0.4,3.1c0.1,0.9,0.2,1.8,0.3,2.5l0.3,2.2
-									c0.1-0.5,0.1-0.9,0.1-1.2c0-0.4,0.1-0.6,0.1-0.9l0.8-5.3l1-6.9c0.1-0.6,0.2-1.2,0.3-1.7c0.1-0.5,0.2-1,0.3-1.4l2.9-16.8h5.7
-									l-8.9,45.5H8.8L0,191.9z"/>
-								<path fill="#714D22" d="M34.8,191.9h4.8l9.8,45.5h-6.1l-1.7-8.9h-9l-1.7,8.9h-5.9L34.8,191.9z M40.6,223.8l-1.4-7.3
-									c-0.9-4.9-1.6-10.2-2.2-15.8c-0.3,2.7-0.6,5.5-1.1,8.3c-0.4,2.8-0.9,5.8-1.5,8.9l-1.1,5.8H40.6z"/>
-								<path fill="#714D22" d="M57.3,191.9h6.1v40.3h10v5.2H57.3V191.9z"/>
-								<path fill="#714D22" d="M103.6,215.8c0,8-0.9,13.8-2.7,17.1c-1.8,3.4-4.8,5.1-9,5.1c-4.4,0-7.5-1.8-9.3-5.5
-									c-1.8-3.6-2.7-9.9-2.7-19c0-8.1,0.9-13.8,2.7-17.2c1.8-3.4,4.8-5.1,9.1-5.1c3.8,0,6.6,1.3,8.5,3.9c1.2,1.7,2.1,4.2,2.7,7.5
-									C103.4,205.7,103.6,210.1,103.6,215.8z M97.2,216.4c0-7.9-0.4-13.1-1.1-15.7c-0.7-2.6-2.2-3.9-4.3-3.9s-3.6,1.2-4.4,3.6
-									c-0.7,2.4-1.1,7.2-1.1,14.4c0,6.7,0.4,11.3,1.1,13.9c0.8,2.4,2.2,3.7,4.3,3.7c2.1,0,3.5-1.1,4.2-3.4
-									C96.8,226.7,97.2,222.5,97.2,216.4z"/>
-								<path fill="#714D22" d="M113.2,191.9h8.1c3.3,0,5.8,0.8,7.5,2.4c2.1,2.1,3.1,5.2,3.1,9.5c0,3.3-0.5,5.9-1.6,7.9
-									c-1.1,2-2.6,3.2-4.7,3.7l8.4,22.1h-6.2l-8.3-22.3v22.3h-6.1V191.9z M119.3,212.1c2.4,0,4.1-0.6,5-1.7c1-1.1,1.5-3,1.5-5.6
-									c0-1.4-0.1-2.6-0.3-3.6s-0.5-1.8-1-2.4c-0.4-0.6-1-1.1-1.7-1.4c-0.7-0.3-1.5-0.4-2.5-0.4h-1V212.1z"/>
-								<path fill="#714D22" d="M165.5,191.9h4.8l9.8,45.5H174l-1.7-8.9h-9l-1.7,8.9h-5.9L165.5,191.9z M171.4,223.8l-1.4-7.3
-									c-0.9-4.9-1.6-10.2-2.2-15.8c-0.3,2.7-0.6,5.5-1.1,8.3c-0.4,2.8-0.9,5.8-1.5,8.9l-1.1,5.8H171.4z"/>
-								<path fill="#714D22" d="M191,191.9h5.2l4,18.6c0.5,2.3,0.9,4.6,1.3,7c0.4,2.3,0.8,4.8,1.1,7.3c0-0.3,0.1-0.6,0.1-0.8s0-0.3,0.1-0.4
-									l0.9-5.2l0.8-5l0.7-3.3l3.6-18.3h5.3l4.2,45.5h-5.9l-1-15.5c0-0.8-0.1-1.5-0.1-2c0-0.6,0-1,0-1.4l-0.3-6.1l-0.1-5.6
-									c0,0,0-0.1,0-0.3c0-0.1,0-0.3,0-0.5l-0.1,0.9c-0.2,1.1-0.3,2-0.4,2.8c-0.1,0.8-0.2,1.5-0.3,2L209,216l-0.3,1.6l-3.8,19.9h-4.1
-									l-3.6-17.2c-0.5-2.3-0.9-4.6-1.3-6.9c-0.4-2.3-0.7-4.8-1-7.3l-1.8,31.4h-5.8L191,191.9z"/>
-								<path fill="#714D22" d="M226.9,191.9h8.3c6.5,0,9.8,4,9.8,12.1c0,3.1-0.4,5.4-1.3,6.9s-2.3,2.6-4.5,3.4c2.5,1,4.1,2.2,5,3.8
-									c0.9,1.5,1.4,3.8,1.4,6.8c0,8.4-3.6,12.5-10.7,12.5h-8V191.9z M232.6,212c2.4,0,4-0.6,5-1.7c0.9-1.2,1.4-3.2,1.4-6.1
-									c0-4.9-1.8-7.4-5.3-7.4h-0.5h-0.3c-0.2,0-0.3,0-0.3,0V212z M232.6,232.2c2.5,0,4.3-0.5,5.2-1.6c1-1.1,1.4-3,1.4-5.9
-									c0-2.9-0.5-4.9-1.5-6.1c-1-1.2-2.7-1.8-5.2-1.8V232.2z"/>
-								<path fill="#714D22" d="M255.1,191.9h6.1v45.5h-6.1V191.9z"/>
-								<path fill="#714D22" d="M271.6,191.9h16.3v5.2h-10.2v14.4h9v5.2h-9v15.5h10.2v5.2h-16.3V191.9z"/>
-								<path fill="#714D22" d="M296.9,191.9h5.7l6.1,18.2c1.8,5.1,3.3,10.6,4.7,16.4c-0.5-3.5-0.9-6.7-1.1-9.6c-0.2-2.9-0.4-5.5-0.4-8v-17
-									h6.2v45.5h-5.7l-6.9-20.5c-0.6-1.9-1.2-3.9-1.8-5.9c-0.6-2-1.1-4.1-1.5-6.3c0-0.3-0.1-0.6-0.2-1c-0.1-0.4-0.2-0.8-0.3-1.4
-									c0.1,0.5,0.1,0.9,0.1,1.3c0,0.4,0.1,0.7,0.1,0.9l0.3,4.6l0.3,5.6c0,0.3,0,0.7,0,1.1c0,0.5,0,1,0,1.5l0.3,19.8h-6V191.9z"/>
-								<path fill="#714D22" d="M326,191.9h20v5.4h-6.9v40.2h-6v-40.2H326V191.9z"/>
-								<path fill="#714D22" d="M358.5,191.9h4.8l9.8,45.5H367l-1.7-8.9h-9l-1.7,8.9h-5.9L358.5,191.9z M364.4,223.8l-1.4-7.3
-									c-0.9-4.9-1.6-10.2-2.2-15.8c-0.3,2.7-0.6,5.5-1.1,8.3c-0.4,2.8-0.9,5.8-1.5,8.9l-1.1,5.8H364.4z"/>
-								<path fill="#714D22" d="M381,191.9h6.1v40.3h10v5.2H381V191.9z"/>
+								<g>
+									<path fill="#FFFFFF" d="M45.1,0c5.9,15-4.2,31.4-20,31.4h-0.3H25h-0.3C8.9,31.4-1.2,15,4.7,0l0,0c-10.9,13.8-2.5,40.3,20,40.3H25
+										C47.5,40.4,55.9,13.9,45.1,0L45.1,0z"/>
+								</g>
+								<g>
+									<path fill="#FFFFFF" d="M14.3,25.2c-3.1-7.9,2.2-16.5,10.5-16.5H25h-0.2H25c8.3,0,13.6,8.6,10.5,16.5l0,0C41.2,17.9,36.8,4,25,4
+										h-0.2C13.1,4,8.7,17.9,14.3,25.2L14.3,25.2z"/>
+								</g>
+								<circle fill="#FFFFFF" cx="24.9" cy="20.2" r="4.2"/>
+								<g>
+									<path fill="#FFFFFF" d="M53.9,12.3h2.4l1.1,6.5l0.2,1.2l0.4,2.6c0.1,0.4,0.1,0.8,0.2,1.2c0,0.4,0.1,0.7,0.1,1l0.1,0.9
+										c0-0.2,0-0.3,0.1-0.5c0-0.1,0-0.3,0-0.3l0.3-2.1l0.4-2.7c0-0.2,0.1-0.5,0.1-0.7c0-0.2,0.1-0.4,0.1-0.6l1.1-6.5h2.2L59.2,30h-1.9
+										L53.9,12.3z"/>
+									<path fill="#FFFFFF" d="M67.4,12.3h1.9L73.1,30h-2.4L70,26.5h-3.5L65.8,30h-2.3L67.4,12.3z M69.7,24.7l-0.5-2.8
+										c-0.4-1.9-0.6-4-0.9-6.2c-0.1,1.1-0.2,2.1-0.4,3.2c-0.2,1.1-0.4,2.2-0.6,3.5l-0.4,2.3H69.7z"/>
+									<path fill="#FFFFFF" d="M76.2,12.3h2.4V28h3.9v2h-6.3V12.3z"/>
+									<path fill="#FFFFFF" d="M94.2,21.6c0,3.1-0.3,5.4-1,6.7c-0.7,1.3-1.9,2-3.5,2c-1.7,0-2.9-0.7-3.6-2.1c-0.7-1.4-1-3.8-1-7.4
+										c0-3.2,0.3-5.4,1-6.7c0.7-1.3,1.9-2,3.5-2c1.5,0,2.6,0.5,3.3,1.5c0.5,0.7,0.8,1.6,1,2.9C94.1,17.6,94.2,19.3,94.2,21.6z
+										 M91.7,21.8c0-3.1-0.1-5.1-0.4-6.1c-0.3-1-0.8-1.5-1.7-1.5c-0.8,0-1.4,0.5-1.7,1.4c-0.3,0.9-0.4,2.8-0.4,5.6
+										c0,2.6,0.1,4.4,0.4,5.4c0.3,0.9,0.9,1.4,1.7,1.4c0.8,0,1.4-0.4,1.7-1.3C91.6,25.8,91.7,24.2,91.7,21.8z"/>
+									<path fill="#FFFFFF" d="M97.9,12.3h3.1c1.3,0,2.3,0.3,2.9,0.9c0.8,0.8,1.2,2,1.2,3.7c0,1.3-0.2,2.3-0.6,3.1
+										c-0.4,0.8-1,1.2-1.8,1.4L106,30h-2.4l-3.2-8.7V30h-2.4V12.3z M100.3,20.1c0.9,0,1.6-0.2,2-0.6c0.4-0.4,0.6-1.2,0.6-2.2
+										c0-0.6,0-1-0.1-1.4c-0.1-0.4-0.2-0.7-0.4-1c-0.2-0.2-0.4-0.4-0.7-0.5s-0.6-0.2-1-0.2h-0.4V20.1z"/>
+									<path fill="#FFFFFF" d="M118.3,12.3h1.9L124,30h-2.4l-0.7-3.5h-3.5l-0.7,3.5h-2.3L118.3,12.3z M120.6,24.7l-0.5-2.8
+										c-0.4-1.9-0.6-4-0.9-6.2c-0.1,1.1-0.2,2.1-0.4,3.2c-0.2,1.1-0.4,2.2-0.6,3.5l-0.4,2.3H120.6z"/>
+									<path fill="#FFFFFF" d="M128.2,12.3h2l1.6,7.2c0.2,0.9,0.4,1.8,0.5,2.7c0.2,0.9,0.3,1.9,0.4,2.9c0-0.1,0-0.2,0-0.3
+										c0-0.1,0-0.1,0-0.2l0.3-2l0.3-1.9l0.3-1.3l1.4-7.1h2.1l1.6,17.7h-2.3l-0.4-6c0-0.3,0-0.6,0-0.8c0-0.2,0-0.4,0-0.6l-0.1-2.4
+										l-0.1-2.2c0,0,0,0,0-0.1c0,0,0-0.1,0-0.2l-0.1,0.4c-0.1,0.4-0.1,0.8-0.2,1.1c-0.1,0.3-0.1,0.6-0.1,0.8l-0.3,1.6l-0.1,0.6l-1.5,7.7
+										H132l-1.4-6.7c-0.2-0.9-0.4-1.8-0.5-2.7c-0.2-0.9-0.3-1.9-0.4-2.9L129,30h-2.3L128.2,12.3z"/>
+									<path fill="#FFFFFF" d="M142.2,12.3h3.2c2.5,0,3.8,1.6,3.8,4.7c0,1.2-0.2,2.1-0.5,2.7c-0.3,0.6-0.9,1-1.7,1.3c1,0.4,1.6,0.9,2,1.5
+										c0.4,0.6,0.5,1.5,0.5,2.7c0,3.3-1.4,4.9-4.2,4.9h-3.1V12.3z M144.5,20.1c0.9,0,1.6-0.2,1.9-0.6c0.4-0.5,0.5-1.2,0.5-2.4
+										c0-1.9-0.7-2.9-2.1-2.9h-0.2h-0.1c-0.1,0-0.1,0-0.1,0V20.1z M144.5,28c1,0,1.7-0.2,2-0.6s0.6-1.2,0.6-2.3c0-1.1-0.2-1.9-0.6-2.4
+										c-0.4-0.5-1.1-0.7-2-0.7V28z"/>
+									<path fill="#FFFFFF" d="M153.2,12.3h2.4V30h-2.4V12.3z"/>
+									<path fill="#FFFFFF" d="M159.6,12.3h6.3v2h-4v5.6h3.5v2H162V28h4v2h-6.3V12.3z"/>
+									<path fill="#FFFFFF" d="M169.5,12.3h2.2l2.4,7.1c0.7,2,1.3,4.1,1.8,6.4c-0.2-1.4-0.3-2.6-0.4-3.7c-0.1-1.1-0.1-2.2-0.1-3.1v-6.6
+										h2.4V30h-2.2l-2.7-8c-0.2-0.7-0.5-1.5-0.7-2.3c-0.2-0.8-0.4-1.6-0.6-2.5c0-0.1,0-0.2-0.1-0.4c0-0.2-0.1-0.3-0.1-0.5
+										c0,0.2,0,0.4,0.1,0.5c0,0.1,0,0.3,0,0.4l0.1,1.8l0.1,2.2c0,0.1,0,0.3,0,0.4c0,0.2,0,0.4,0,0.6l0.1,7.7h-2.4V12.3z"/>
+									<path fill="#FFFFFF" d="M180.8,12.3h7.8v2.1h-2.7V30h-2.3V14.4h-2.8V12.3z"/>
+									<path fill="#FFFFFF" d="M193.5,12.3h1.9l3.8,17.7h-2.4l-0.7-3.5h-3.5l-0.7,3.5h-2.3L193.5,12.3z M195.8,24.7l-0.5-2.8
+										c-0.4-1.9-0.6-4-0.9-6.2c-0.1,1.1-0.2,2.1-0.4,3.2c-0.2,1.1-0.4,2.2-0.6,3.5l-0.4,2.3H195.8z"/>
+									<path fill="#FFFFFF" d="M202.2,12.3h2.4V28h3.9v2h-6.3V12.3z"/>
+								</g>
 							</g>
 							</svg>
-						</a>
+		        </a>
 					</div>
 					<div class="collapse navbar-collapse navbar-ex1-collapse">
 						<ul class="nav navbar-nav navbar-right">
 							<li><a href="index.html">Home</a></li>
-							<li><a href="quienes.html">Quienes Somos</a></li>
+							<li><a href="quienes.html">Quiénes Somos</a></li>
 							<li><a href="servicios.html">Servicios</a></li>
 							<li><a href="noticias.html">Noticias</a></li>
 							<li class="active"><a href="contacto.html">Contacto</a></li>
@@ -94,7 +95,10 @@
 		<section id="contacto">
 			<div class="container">
 				<div class="row">
-					<h1>Contacto</h1>
+					<div class="col-lg-12">
+						<h1 class="col-xs-12 col-lg-4">Contacto</h1>
+					</div>
+
 					<div class="col-lg-6">
 						<form action="enviar.php" method="POST" class="form-horizontal">
 							<div class="form-group">
@@ -129,20 +133,26 @@
 									<textarea id="" name="" class="form-control" rows="6"></textarea>
 								</div>
 							</div>
+							<div class="form-group">
+								<div class="col-sm-2"></div>
+								<div class="col-sm-10">
+									<button type="submit" class="form-control btn btn-info pull-right">Enviar</button>
+								</div>
+							</div>
 						</form>
 					</div>
-					<div class="col-lg-6 pull-right">
+					<div class="datos col-sm-12 col-lg-6">
 						<div class="row">
 							<div class="col-xs-2 text-center"><span><i class="fa fa-map-marker fa-2x"></i></span></div>
-							<div class="col-xs-10">Miguel Aguirre Perry 2080, La Serena, Chile</div>
+							<div class="col-xs-10"> | Miguel Aguirre Perry 2080, La Serena, Chile</div>
 						</div>
 						<div class="row">
 							<div class="col-xs-2 text-center"><span><i class="fa fa-phone fa-2x"></i></span></div>
-							<div class="col-xs-10">51 - 2283338</div>
+							<div class="col-xs-10"> | 51 - 2283338</div>
 						</div>
 						<div class="row">
 							<div class="col-xs-2 text-center"><span><i class="fa fa-envelope-o fa-2x"></i></span></div>
-							<div class="col-xs-10">contacto@valoramibiental.cl</div>
+							<div class="col-xs-10"> | contacto@valoramibiental.cl</div>
 						</div>
 					</div>
 				</div>
@@ -159,7 +169,7 @@
 		<footer>
 			<div class="container">
 				<div class="row">
-					<hr />
+
 					<div class="col-lg-12">
 						<p>Copyright © Valor Ambiental 2016</p>
 					</div>
