Cambio de colores
Se cambiaron los colores a colores corporativos

--- a/quienes.html
+++ b/quienes.html
@@ -114,7 +114,7 @@
 <section id="quienes">
   <div class="container">
     <div class="wow slideInLeft row">
-      <h1>Quienes Somos</h1>
+      <h1>Quiénes Somos</h1>
       <div class="col-lg-12">
         <p class="lead">Valor Ambiental es una empresa Consultora en Servicios de Gestión Ambiental y Seguridad Industrial.</p>
         <p class="lead">
