se añadieron los enlaces solicitados
se añadieron los enlaces solicitados a la pagina web

--- a/quienes.html
+++ b/quienes.html
@@ -93,6 +93,8 @@
           <li><a href="servicios.html">Servicios</a></li>
           <li><a href="noticias.html">Noticias</a></li>
           <li><a href="contacto.html">Contacto</a></li>
+					<li><a href="trabaja.html">Trabaja con Nosotros</a></li>
+					<li><a href="intra.valorambiental.cl">Acceder</a></li>
         </ul>
       </div>
     </div>
