--- a/certificación-de-servicios-de-elaboración-y-análisis-de-aplicabilidad-de-permisos.html
+++ b/certificación-de-servicios-de-elaboración-y-análisis-de-aplicabilidad-de-permisos.html
@@ -87,6 +87,8 @@
               <li><a href="servicios.html">Servicios</a></li>
               <li class="active"><a href="noticias.html">Noticias</a></li>
               <li><a href="contacto.html">Contacto</a></li>
+              <li><a href="trabaja.html">Trabaja con Nosotros</a></li>
+							<li><a href="intra.valorambiental.cl">Acceder</a></li>
             </ul>
           </div>
         </div>
@@ -111,7 +113,7 @@
             <div class="row">
                 <!-- Blog Post Content Column -->
                 <div class="col-lg-12">
-                
+
                     <!-- Date/Time -->
                     <p class="datetime"><i class="fa fa-clock-o"></i> Publicado en el 12 de Febrero de 2013 | <small>por Marcela Miranda</small> </p>
                     <hr>
