--- a/valor-ambiental-conjunto-con-superintendencia-recursos-hídricos-teck-cda-realiza-segundo.html
+++ b/valor-ambiental-conjunto-con-superintendencia-recursos-hídricos-teck-cda-realiza-segundo.html
@@ -87,6 +87,8 @@
               <li><a href="servicios.html">Servicios</a></li>
               <li class="active"><a href="noticias.html">Noticias</a></li>
               <li><a href="contacto.html">Contacto</a></li>
+              <li><a href="trabaja.html">Trabaja con Nosotros</a></li>
+							<li><a href="intra.valorambiental.cl">Acceder</a></li>
             </ul>
           </div>
         </div>
