--- a/valor-ambiental-nuevamente-es-reconocida-por-su-compromiso-con-seguridad-y-salud.html
+++ b/valor-ambiental-nuevamente-es-reconocida-por-su-compromiso-con-seguridad-y-salud.html
@@ -87,6 +87,8 @@
               <li><a href="servicios.html">Servicios</a></li>
               <li class="active"><a href="noticias.html">Noticias</a></li>
               <li><a href="contacto.html">Contacto</a></li>
+              <li><a href="trabaja.html">Trabaja con Nosotros</a></li>
+							<li><a href="intra.valorambiental.cl">Acceder</a></li>
             </ul>
           </div>
         </div>
