--- a/valor-ambiental-realiza-levantamiento-viviendas-danadas-por-terremoto-canela.html
+++ b/valor-ambiental-realiza-levantamiento-viviendas-danadas-por-terremoto-canela.html
@@ -87,6 +87,8 @@
               <li><a href="servicios.html">Servicios</a></li>
               <li class="active"><a href="noticias.html">Noticias</a></li>
               <li><a href="contacto.html">Contacto</a></li>
+              <li><a href="trabaja.html">Trabaja con Nosotros</a></li>
+							<li><a href="intra.valorambiental.cl">Acceder</a></li>
             </ul>
           </div>
         </div>
@@ -111,7 +113,7 @@
             <div class="row">
                 <!-- Blog Post Content Column -->
                 <div class="col-lg-12">
-                
+
                     <!-- Date/Time -->
                     <p><i class="fa fa-clock-o"></i> Publicado en el 17 de Diciembre de 2015 | <small>por Sergio Mena</small> </p>
                     <hr>
