--- a/contacto.html
+++ b/contacto.html
@@ -129,7 +129,7 @@
 							</div>
 							<div class="form-group">
 								<div class="control-label col-sm-2">
-									<label>Teléfono: </label>
+									<label>Mensaje: </label>
 								</div>
 								<div class="col-sm-10">
 									<textarea id="" name="" class="form-control" rows="6"></textarea>
