--- a/trabaja.html
+++ b/trabaja.html
@@ -4,26 +4,27 @@
 		<meta charset="utf-8">
 		<meta http-equiv="X-UA-Compatible" content="IE=edge">
 		<meta name="viewport" content="width=device-width, initial-scale=1">
-		<title>Contacto | Valor Ambiental</title>
+		<title>Quienes Somos | Valor Ambiental</title>
 		<meta name="author" content="Oxido Creative Studio">
 		<meta name="description" content="">
 		<link rel="apple-touch-icon" href="apple-touch-icon.png">
 		<link href="bower_components/bootstrap/dist/css/bootstrap.min.css" rel="stylesheet">
 		<link href="bower_components/font-awesome/css/font-awesome.css" rel="stylesheet">
-		<link href="css/noticias.css" rel="stylesheet">
+		<link href="bower_components/animate.css/animate.min.css" rel="stylesheet">
+		<link href="css/trabaja.css" rel="stylesheet">
 	</head>
 	<body>
-		<header>
-			<nav id="nabvar" class="navbar navbar-inverse navbar-fixed-top" role="navigation">
-				<div class='container'>
-					<div class="navbar-header">
-						<button type="button" class="navbar-toggle" data-toggle="collapse"
-						data-target=".navbar-ex1-collapse">
-							<span class="sr-only">Desplegar navegación</span>
-							<span class="icon-bar"></span>
-							<span class="icon-bar"></span>
-							<span class="icon-bar"></span>
-						</button>
+    <header>
+      <nav id="nabvar" class="navbar navbar-inverse navbar-fixed-top" role="navigation">
+        <div class='container'>
+          <div class="navbar-header">
+            <button type="button" class="navbar-toggle" data-toggle="collapse"
+            data-target=".navbar-ex1-collapse">
+              <span class="sr-only">Desplegar navegación</span>
+              <span class="icon-bar"></span>
+              <span class="icon-bar"></span>
+              <span class="icon-bar"></span>
+            </button>
 						<a class="navbar-brand" href="index.html">
 							<svg version="1.1"
 								 xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" xmlns:a="http://ns.adobe.com/AdobeSVGViewerExtensions/3.0/"
@@ -78,21 +79,73 @@
 							</g>
 							</svg>
 		        </a>
-					</div>
-					<div class="collapse navbar-collapse navbar-ex1-collapse">
-						<ul class="nav navbar-nav navbar-right">
-							<li><a href="index.html">Home</a></li>
-							<li><a href="quienes.html">Quiénes Somos</a></li>
-							<li><a href="servicios.html">Servicios</a></li>
-							<li class="active"><a href="noticias.html">Noticias</a></li>
-							<li><a href="contacto.html">Contacto</a></li>
+          </div>
+          <div class="collapse navbar-collapse navbar-ex1-collapse">
+            <ul class="nav navbar-nav navbar-right">
+              <li><a href="index.html">Home</a></li>
+              <li><a href="quienes.html">Quiénes Somos</a></li>
+              <li class="active"><a href="servicios.html">Servicios</a></li>
+              <li><a href="noticias.html">Noticias</a></li>
+              <li><a href="contacto.html">Contacto</a></li>
 							<li><a href="trabaja.html">Trabaja con Nosotros</a></li>
 							<li><a href="intra.valorambiental.cl">Acceder</a></li>
-						</ul>
-					</div>
-				</div>
-			</nav>
-		</header>
+            </ul>
+          </div>
+        </div>
+      </nav>
+    </header>
+
+  <section id="trabaja">
+    <div class="container">
+      <div class="row">
+          <div class="col-lg-12">
+            <h1 class="col-xs-12 col-lg-4">Trabaja con Nosotros</h1>
+          </div>
+        <div class="col-lg-6">
+          <form action="enviar.php" method="POST" class="form-horizontal">
+          <div class="form-group">
+            <div class="control-label col-sm-2">
+              <label>Nombre: </label>
+            </div>
+            <div class="col-sm-10">
+              <input type="text" id="" name="" class="form-control">
+            </div>
+          </div>
+          <div class="form-group">
+            <div class="control-label col-sm-2">
+              <label>Email: </label>
+            </div>
+            <div class="col-sm-10">
+              <input type="text" id="" name="" class="form-control">
+            </div>
+          </div>
+          <div class="form-group">
+            <div class="control-label col-sm-2">
+              <label>Teléfono: </label>
+            </div>
+            <div class="col-sm-10">
+              <input type="text" id="" name="" class="form-control">
+            </div>
+          </div>
+          <div class="form-group">
+            <div class="control-label col-sm-2">
+              <label>Mensaje: </label>
+            </div>
+            <div class="col-sm-10">
+              <textarea id="" name="" class="form-control" rows="6"></textarea>
+            </div>
+          </div>
+          <div class="form-group">
+            <div class="col-sm-2"></div>
+            <div class="col-sm-10">
+              <button type="submit" class="form-control btn btn-info pull-right">Enviar</button>
+            </div>
+          </div>
+          </form>
+        </div>
+      </div>
+    </div>
+  </section>
 
     <footer>
       <div class="container">
@@ -106,7 +159,13 @@
 
 
 
+    <script type="text/javascript" src="bower_components/jquery/dist/jquery.min.js"></script>
+    <script type="text/javascript" src="bower_components/bootstrap/dist/js/bootstrap.min.js"></script>
+    <script type="text/javascript" src="bower_components/wow/dist/wow.min.js"></script>
+    <script>
+      new WOW().init();
+    </script>
 
 
-  </body>
-</html>
+    </body>
+    </html>
