arreglo barra nav
arreglo, se oculto trabaja con nosotros en sm

--- a/index.html
+++ b/index.html
@@ -276,7 +276,7 @@ YYnbDmJT++P/j//Y+EuAAQBWzD1mI+zIOAAAAABJRU5ErkJggg==" transform="matrix(1 0 0 1 
 							<li><a href="servicios.html">Servicios</a></li>
 							<li><a href="noticias.html">Noticias</a></li>
 							<li><a href="contacto.html">Contacto</a></li>
-							<li><a href="trabaja.html">Trabaja con Nosotros</a></li>
+							<li class="hidden-sm"><a href="trabaja.html">Trabaja con Nosotros</a></li>
 							<li><a href="intra.valorambiental.cl">Acceder</a></li>
 						</ul>
 					</div>
