--- a/certificación-de-servicios-de-elaboración-y-análisis-de-aplicabilidad-de-permisos.html
+++ b/certificación-de-servicios-de-elaboración-y-análisis-de-aplicabilidad-de-permisos.html
@@ -11,6 +11,7 @@
     <link href="bower_components/bootstrap/dist/css/bootstrap.min.css" rel="stylesheet">
     <link href="bower_components/font-awesome/css/font-awesome.css" rel="stylesheet">
     <link href="css/noticias.css" rel="stylesheet">
+    <link rel="stylesheet" href="css/main.css">
 </head>
 
 <body>
@@ -128,16 +129,43 @@
         <!-- /.row -->
     </section>
 
-    <footer>
-        <div class="container">
-            <div class="row">
+    <footer class="pie">
+      <div class="container">
+        <div class="row">
 
-                <div class="col-lg-12">
-                    <p>Copyright © Valor Ambiental 2016</p>
-                </div>
+            <div class="col-xs-12 col-sm-12 col-md-4 col-lg-4">
+            <h4>EMPRESA</h4>
+            <ul>
+              <li><a class="page-scroll" href="quienes.html">Quiénes Somos</a></li>
+              <li><a class="page-scroll" href="servicios.html">Servicios</a></li>
+              <li><a class="page-scroll" href="servicios.html">Contacto</a></li></li>
+            </ul>
             </div>
+            <div class="col-xs-12 col-sm-12 col-md-4 col-lg-4">
+            <h4>TRABAJA CON NOSOTROS</h4>
+            <a id="conosotros" href="trabaja.html">Contáctanos</a>
+            </div>
+            <div class="col-xs-12 col-sm-12 col-md-4 col-lg-4">
+            <h4 class="text-right">INFO</h4>
+            <address class="text-right">
+              <strong>Valor Ambiental</strong><br>
+              Miguel Aguirre Perry N°2080<br>
+              La Serena. Región de Coquimbo<br>
+              Chile<br>
+              <abbr title="Teléfono">T:</abbr> <a href="tel:+562283338">(+56) 2 283 338</a>
+            </address>
+
+            </div>
+
+          <hr>
+          <!-- Footer -->
+          <footer class="footer">
+              <div class="container">
+                  <p class="text-center pieoxido"><small>Diseñado y desarrollado por <a href="http://www.oxidocs.com">OXIDO Creative Studio</a> | 2016.</small></p>
+              </div>
+          </footer>
         </div>
-        <!-- /.container -->
+      </div>
     </footer>
 
     <script type="text/javascript" src="bower_components/jquery/dist/jquery.min.js"></script>
