--- a/noticias.html
+++ b/noticias.html
@@ -11,6 +11,7 @@
 		<link href="bower_components/bootstrap/dist/css/bootstrap.min.css" rel="stylesheet">
 		<link href="bower_components/font-awesome/css/font-awesome.css" rel="stylesheet">
 		<link href="css/noticias.css" rel="stylesheet">
+		<link href="css/main.css" rel="stylesheet">
 	</head>
 	<body>
 		<header>
@@ -127,6 +128,27 @@
 
         <hr>
 
+				<!-- Blog Post Row -->
+        <div class="row">
+
+            <div class="col-md-5">
+                <a href="valor-ambiental-nuevamente-es-reconocida-por-su-compromiso-con-seguridad-y-salud.html">
+                    <img class="img-responsive img-hover center-block" src="images/mutual_033.jpg" alt="">
+                </a>
+            </div>
+            <div class="col-md-6">
+                <h3>
+                    <a href="valor-ambiental-nuevamente-es-reconocida-por-su-compromiso-con-seguridad-y-salud.html">Valor ambiental nuevamente es reconocida por su compromiso con la Seguridad y Salud Ocupacional</a>
+                </h3>
+                <p>por Sergio Mena</p>
+								<p><i>Dic 10, 2015</i></p>
+                <p>Se celebró con orgullo el reconocimiento recibido por La Mutual de Seguridad a nuestra empresa Valor Ambiental, este jueves 05 de Noviembre del 2015, por cumplir 5 años sin accidente con tiempo perdido, en el contrato de Servicios de Gestión Ambiental y Seguridad, en Compañía Mineta Teck Carmen Andacollo.</p>
+                <p>Los desafíos constantes en sembrar la cultura de seguridad siguen dando frutos, y seguiremos esforzándonos en prevalecer día a día nuestro futuro libre de accidentes y enfermedades profesionales.</p>
+                <a class="btn btn-primary pull-right" href="valor-ambiental-nuevamente-es-reconocida-por-su-compromiso-con-seguridad-y-salud.html">Ver Más <i class="fa fa-angle-right"></i></a>
+            </div>
+        </div>
+        <!-- /.row -->
+
         <!-- Blog Post Row -->
         <div class="row">
 
@@ -194,14 +216,41 @@
 			<hr>
     </div>
     <!-- /.container -->
-	</section>
-		<footer>
+		<footer class="pie">
 			<div class="container">
 				<div class="row">
 
-					<div class="col-lg-12">
-						<p>Copyright © Valor Ambiental 2016</p>
-					</div>
+						<div class="col-xs-12 col-sm-12 col-md-4 col-lg-4">
+						<h4>EMPRESA</h4>
+						<ul>
+							<li><a class="page-scroll" href="quienes.html">Quiénes Somos</a></li>
+							<li><a class="page-scroll" href="servicios.html">Servicios</a></li>
+							<li><a class="page-scroll" href="servicios.html">Contacto</a></li></li>
+						</ul>
+						</div>
+						<div class="col-xs-12 col-sm-12 col-md-4 col-lg-4">
+						<h4>TRABAJA CON NOSOTROS</h4>
+						<a id="conosotros" href="trabaja.html">Contáctanos</a>
+						</div>
+						<div class="col-xs-12 col-sm-12 col-md-4 col-lg-4">
+						<h4 class="text-right">INFO</h4>
+						<address class="text-right">
+							<strong>Valor Ambiental</strong><br>
+							Miguel Aguirre Perry N°2080<br>
+							La Serena. Región de Coquimbo<br>
+							Chile<br>
+							<abbr title="Teléfono">T:</abbr> <a href="tel:+562283338">(+56) 2 283 338</a>
+						</address>
+
+						</div>
+
+					<hr>
+					<!-- Footer -->
+					<footer class="footer">
+							<div class="container">
+									<p class="text-center pieoxido"><small>Diseñado y desarrollado por <a href="http://www.oxidocs.com">OXIDO Creative Studio</a> | 2016.</small></p>
+							</div>
+					</footer>
 				</div>
 			</div>
 		</footer>
